[metadata]
name = wsid
version = 0.2
author = matheuz1210
author_email = matheuz1210@gmail.com
description = web show image directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matheuz1210/wsid
classifiers =
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
scripts = wsid
python_requires = >= 3.9
