[metadata]
name = wsid
version = attr: wsid.__version__
author = matheuz1210
author_email = matheuz1210@gmail.com
description = web show image directory
license = GPLv2+
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matheuz1210/wsid
classifiers =
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
py_modules = wsid
python_requires = >= 3.7

[options.extras_require]
	gui = PyQt5

[options.entry_points]
console_scripts = wsid=wsid:main

[flake8]
max-line-length = 99
ignore = E701, E401
